// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailVerification /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section"
        id="confirming-email"
      >
        Confirming email
      </h1>
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section"
        id="confirming-email"
      >
        Confirming email
      </h1>
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with user 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section"
        id="email-confirmed"
      >
        Email confirmed
      </h1>
      <span
        class="typography__main typography__paragraph"
      >
        Thank you for confirming your email address
      </span>
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with verifyError 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section"
        id="confirming-email"
      >
        Confirming email
      </h1>
      <span
        class="typography__main typography__paragraph"
      >
        Something went wrong whilst confirming your email
      </span>
      <br />
      <span
        class="typography__main typography__paragraph"
      >
        Invalid verification link
      </span>
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with verifying=true 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section"
        id="confirming-email"
      >
        Confirming email
      </h1>
    </div>
  </div>
</div>
`;
